@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="service.upgrade.pelisalacarta"
-       name="UPGradePelisALaCarta"
+       name="upgrade.pelisalacarta"
        version="1.0.1"
        provider-name="kampanita">
   <requires>
@@ -13,7 +13,7 @@
     <description lang="en">upgrade.pelisalacarta made for you by Kampanita (inkubopunk.org)</description>
 		<license>GNU General Public License, v2</license>
 		<language></language>
-		<forum>http://www.mimediacenter.info/foro/viewtopic.php?f=12&t=7419</forum>
+		<forum>http://forum.kodi.tv/showthread.php?tid=209948</forum>
 		<source>https://github.com/kampanita/service.upgrade.pelisalacarta</source>
 		<email>kampanita@gmail.com</email>
   </extension>
