@@ -19,7 +19,7 @@ def upgrade():
     path=xbmc.translatePath('special://temp/')
     path2=xbmc.translatePath('special://home/')
 
-    #xbmc.executebuiltin('Notification(%s, %s, %d, %s)'%(addonname,"upgrade inicia", time, icon))
+    xbmc.executebuiltin('Notification(%s, %s, %d, %s)'%(addonname,"upgrade inicia", time, icon))
     
     file = urllib2.urlopen("https://codeload.github.com/tvalacarta/pelisalacarta/zip/master")
     file_int = int(file.info()['Content-Length'])
@@ -32,8 +32,8 @@ def upgrade():
     
     if file_int <> file_local:
     
-        #xbmc.log("ejecutado NoIp "+str(file_int)+" - "+str(file_local))
-        #xbmc.log("ejecutado NoIp "+path+'pelis.zip')
+        xbmc.log("ejecutado NoIp "+str(file_int)+" - "+str(file_local))
+        xbmc.log("ejecutado NoIp "+path+'pelis.zip')
         
         urllib.urlretrieve ("https://codeload.github.com/tvalacarta/pelisalacarta/zip/master", path+'pelis.zip')
                 
@@ -53,7 +53,7 @@ def upgrade():
         except:
            xbmc.executebuiltin('Notification(%s, %s, %d, %s)'%(addonname,"Error en upgrade", time, icon))
    
-    #xbmc.executebuiltin('Notification(%s, %s, %d, %s)'%(addonname,"Upgrade termina", time, icon))
+    xbmc.executebuiltin('Notification(%s, %s, %d, %s)'%(addonname,"Upgrade termina", time, icon))
     return;
 
 def test():
